--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "rollup -c rollup.config.js --watch",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "rollup -c rollup.config.js --watch"
     },
     "repository": {
         "type": "git",
